--- a/.github/workflows/killer-cliente-docker.yml
+++ b/.github/workflows/killer-cliente-docker.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         push: true
         tags: |
-          ${{ secrets.DOCKER_HUB_USERNAME }}/articulos-app-vue:latest
-          ${{ secrets.DOCKER_HUB_USERNAME }}/articulos-app-vue:${{ github.sha }}
+          ${{ secrets.DOCKER_HUB_USERNAME }}/killer-cliente:latest
+          ${{ secrets.DOCKER_HUB_USERNAME }}/killer-cliente:${{ github.sha }}
         file: ./Dockerfile
         platforms: linux/amd64,linux/arm64/v8
